# datafactory

./: .gitignore  DeepAgent-API 명세.md  README.md  [260710] 데이터 구축 프로젝트 1차 검수 결과 및 Randy 확인 요청.md  pyproject.toml  start_datafactory_gui.command  공개_저장소_로컬_필수_파일_안내.md  라이브러리 샘플 데이터 제작 가이드.md  수기체_데이터셋_생성_마스터_계획.md  좌우_패널_후속_작업_계획.md
app/: streamlit_app.py
docs/: 20260702_cleanroom_authoring_method.md  20260703_final_results_export_implementation_plan.md  20260703_pure_semantic_gt_export_plan.md  20260703_workspace_cleanup_plan.md  README.md  authoring_backup_policy.md  manual_template_cleanup_plan.md  pipeline_ready_bbox_schema_refinement_plan.md  pipeline_ready_document_authoring_playbook.md  policy_control_plan.md  project_rough_plan.md  registry_workbench_implementation.md  schema_stylesheet_faker_plan.md  start_idea.md  v1_development.md
registry/: DEEP_Agent_문서분류_레지스트리_v2.2.xlsx  risky_documents.md
scripts/: audit_printed_authoring_quality.py  build_app12_product_terms_cleanroom.py  build_appraisal_cleanroom_trial.py  build_audit_opinion_cleanroom_trial.py  build_board_minutes_cleanroom_trial.py  build_compliance_cleanroom_trial.py  build_lgl02_judgment_cleanroom_guided.py  build_manual_authoring_20260702.py  build_rpt02_credit_review_cleanroom_guided.py  build_rpt06_feasibility_cleanroom_guided.py  calibrate_id03_shareholder_style.py  enhance_adm04_estimate_quotation_authoring.py  enhance_app13_account_opening_authoring.py  enhance_app14_card_application_authoring.py  enhance_col05_public_land_price_authoring.py  enhance_crd01_credit_report_authoring.py  (+31 more)
(+1140 files in other folders)
